--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pequode</title>
+    <style>
+            .projects {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                gap: 1rem;
+            }
+            .card {
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                padding: 1rem;
+                background: #fff;
+                transition: box-shadow 0.2s ease;
+            }
+
+            .card:hover {
+                
+                box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            }
+
+            .card img {
+                width: 100%;
+                border-radius: 6px;
+            }
+    </style>
 </head>
-<body>
-    Hi I am George.
-    
-</body>
+<h1>My Projects</h1>
+
+<div class="projects">
+  {% for project in site.projects %}
+    <div class="card">
+      <a href="{{ project.url }}">
+        {% if project.image %}
+          <img src="{{ project.image }}" alt="{{ project.title }}" />
+        {% endif %}
+        <h2>{{ project.title }}</h2>
+        <p>{{ project.description }}</p>
+      </a>
+    </div>
+  {% endfor %}
+</div>
 </html>
