--- a/index.html
+++ b/index.html
@@ -2,7 +2,30 @@
 layout: default
 title: Home
 ---
+<style>
+            .projects {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                gap: 1rem;
+            }
+            .card {
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                padding: 1rem;
+                background: #fff;
+                transition: box-shadow 0.2s ease;
+            }
 
+            .card:hover {
+                
+                box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            }
+
+            .card img {
+                width: 100%;
+                border-radius: 6px;
+            }
+    </style>
 <h1>My Projects</h1>
 
 <div class="projects">
