--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@ title: Home
                 border: 1px solid #ddd;
                 border-radius: 8px;
                 padding: 1rem;
-                background: #05ba30;
+                background: #9cffb3;
                 transition: box-shadow 0.2s ease;
+                color:black
             }
 
             .cardfun:hover {
                 
                 box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+                color:black
             }
 
             .cardfun img {
