--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@ title: Home
             .card img {
                 width: 100%;
                 border-radius: 6px;
+                image-rendering: pixelated;
+                image-rendering: crisp-edges; /* fallback */
             }
             .cardfun {
                 border: 1px solid #ddd;
@@ -43,6 +45,8 @@ title: Home
             .cardfun img {
                 width: 100%;
                 border-radius: 6px;
+                image-rendering: pixelated;
+                image-rendering: crisp-edges; /* fallback */
             }
     </style>
 <h1>My Projects</h1>
