--- a/_projects/personal-rust-maze-drawer.html
+++ b/_projects/personal-rust-maze-drawer.html
@@ -106,7 +106,7 @@ personal: true
   }
 
   // Draw maze on page
-  const { download } = draw_canvas(result, {
+  const { download } = draw_canvas(result[0], {
     cellSize: 32,
     gap: 1,
     lineColor: "#ddd",
