--- a/_projects/personal-rust-maze-drawer.html
+++ b/_projects/personal-rust-maze-drawer.html
@@ -2,7 +2,7 @@
 title: A Crabby way to draw simple mazes.  
 layout: default
 description: Using rust and Prims algorithm to randomly generate unique mazes.    
-image: /assets/sangam_0.svg
+image: /assets/rust_maze_0.png
 personal: true 
 ---
 
