--- a/_projects/personal-rust-maze-drawer.html
+++ b/_projects/personal-rust-maze-drawer.html
@@ -125,7 +125,7 @@ personal: true
   el.appendChild(btn);
 </script>
 <div id="maze_cont"></div>
-<h1>kills</h1>
+<h1>Skills</h1>
 <ul>
   <li>Rust</li>
   <li>Js</li>
